@@ -1,5 +1,10 @@
 2006-10-17  Tom Tromey  <tromey@redhat.com>
 
+	* jcf-dump.c (print_element_value): Expect a utf8 constant in the
+	"string" case.
+
+2006-10-17  Tom Tromey  <tromey@redhat.com>
+
 	* jvgenmain.c (main): Handle -findirect-dispatch.
 	* jvspec.c (jvgenmain_spec): Pass -findirect-dispatch to
 	jvgenmain.
